# OTUS_09_12_homework

./: .gitignore   Dockerfile  Makefile  Read.me  pyproject.toml  requirements.txt
.github/workflows/: typing.yml
src/typing_basic/: task_01_any.py  task_02_dict.py  task_03_final.py  task_04_kwargs.py  task_05_list.py  task_06_optinal.py  task_07_parameter.py  task_08_return.py  task_09_tuple.py  task_10_typealias.py  task_11_union.py  task_12_variable.py
src/typing_intermediate/: task_010_literal.py  task_011_literalstring.py  task_012_self.py  task_013_typed_dict.py  task_014_typed_dict2.py  task_015_typed_dict3.py  task_016_unpack.py  task_01_await.py  task_02_callable.py  task_03_class_var.py  task_04_decorator.py  task_05_empty_tuple.py  task_06_generic.py  task_07_generic2.py  task_08_generic3.py  task_09_instance_var.py
