[project]
name = "typing-homework"
version = "0.1.0"
description = "OTUS typing homework"
requires-python = ">=3.12"
dependencies = []

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
